# piuroforge

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  STATE.md  install.sh
.github/workflows/: release.yml
scripts/: package-release.sh
src/: codex_runner.rs  config.rs  engine.rs  launch_contract.rs  lib.rs  llm_runner.rs  main.rs  memory_manager.rs  models.rs  novel_backend.rs  output.rs  state_manager.rs  story_foundation.rs  workspace_git.rs  workspace_scaffold.rs
src/agents/: base.rs  critic.rs  editor.rs  mod.rs  planner.rs  writer.rs
src/commands/: approve.rs  capabilities.rs  doctor.rs  expand_world.rs  init.rs  memory.rs  mod.rs  next_bundle.rs  next_chapter.rs  next_scene.rs  polish.rs  proofread.rs  review.rs  rewrite.rs  show.rs  status.rs
src/prompts/: critic.txt  editor.txt  mod.rs  planner.txt  writer.txt
src/utils/: files.rs  markdown.rs  mod.rs
tests/: cli_output.rs  codex_runner.rs  smoke.rs
